--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
             <div class="container">
               <header class="header">
                 <img src="photos/KN-logo.png" alt="KiLLNiÑO" class="nav-name">
-                <nav>
+                <!-- <nav>
                   <ul class="nav-links">
                     <li><a href="#about">About</a></li>
                     <li><a href="#albums">Albums</a></li>
                     <li><a href="#contact">Contact</a></li>
                   </ul>
-                </nav>
+                </nav> -->
               </header>
           
               <section id="about" class="section about">
